--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sushi Wasadi</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;900&family=Slabo+13px&family=Ultra&display=swap" rel="stylesheet">    <script src="https://kit.fontawesome.com/0b5737951b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -27,10 +28,31 @@
     <hr>
 </section>
 <section id="middle-section">
-   <h1 class="big-heading">Sushi Wasadi</h1>
+   <div class="container">
+    <h1 class="big-heading">Sushi Wasadi</h1>
    <p>Cafe in Toronto</p>
    <p>Open today till 7 AM.</p>
    <a href="" class="contact-btn btn">Contact Us</a>
+   </div>
+   <div id="img-carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="" src="images/Screenshot 2022-06-16 at 1.51.02 PM.png" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="" src="images/Screenshot 2022-06-16 at 1.51.29 PM.png" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="" src="images/Screenshot 2022-06-16 at 1.52.22 PM.png" alt="Third slide">
+      </div>
+    </div>
+  </div>
+  <div class="hr-div">
+  </div>
+  <div>
+    <h2 class="c-heading">CONTACT US</h2>
+    <img src="images/map.png" alt="">
+  </div>
 </section>
 </body>
 </html>
